--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -1,18 +1,20 @@
 {
-  "loading":"Bienvenido a mi Portafolio",
+  "metadata": "Portafolio de",
+
+  "loading": "Bienvenido a mi Portafolio",
   "404": "Pagina no encontrada",
-  "back":"Volver",
+  "back": "Volver",
 
   "aboutme-greeting": "Hola",
   "aboutme-greeting2": "Soy Agustín Ribotta,",
   "aboutme-greeting3": "Desarrollador Web Argentino",
 
-  "project-title":"Proyectos",
+  "project-title": "Proyectos",
   "technologys": "Tecnologias",
   "libraries": "Librerias",
   "year": "Año",
   "client": "Cliente",
   "repo-web": "Repo & Web",
 
-  "contact-title":"Contacto"
+  "contact-title": "Contacto"
 }
