--- a/data/ecommerce-app.mdx
+++ b/data/ecommerce-app.mdx
@@ -1,25 +1,30 @@
 ---
 title: "Ecommerce App"
-image: "/images/discord/3.PNG"
-date: "2020-01-01"
+image: "/images/ecommerce/1.PNG"
+date: "2022-04-01"
 ---
 
-# Ecommerce App
-
-Tecnologias: NextJS, GraphQL, Nexus, Prisma
-
-Librerias: Framer Motion, TailwindCSS, Formik, Yup,
-
-En conjunto con: <LinkTo to="https://github.com/marcoscianzio" name="Marcos Cianzio"/>
-
+<Header
+  title="Ecommerce App"
+  img="/images/ecommerce/1.PNG"
+  alt="Ecommerce Picture"
+/>
+<List
+  tec={["NextJS", "NodeJS", "Redux"]}
+  lib={["Mercadopago SDK", "TailwindCSS", "Framer Motion"]}
+  year="2022"
+  client="Propio"
+  website="https://nextjs-ecommerce-aguzzdev.vercel.app/"
+  repo="https://github.com/AguzzDev/nextjs-ecommerce"
+/>
 <Galery
   imgs={[
-    "/images/discord/4.PNG",
-    "/images/discord/3.PNG",
-    "/images/discord/1.PNG",
-    "/images/discord/2.PNG",
-    "/images/discord/5.PNG",
-    "/images/discord/6.PNG",
+    "/images/ecommerce/1.PNG",
+    "/images/ecommerce/2.PNG",
+    "/images/ecommerce/3.PNG",
+    "/images/ecommerce/4.PNG",
+    "/images/ecommerce/5.PNG",
+    "/images/ecommerce/6.PNG",
   ]}
   alt="Ecommerce App"
-></Galery>
+/>
