fix some files that not working

--- a/data/paint-app.mdx
+++ b/data/paint-app.mdx
@@ -13,4 +13,7 @@ date: "2020-01-01"
   website="https://react-paint-app.vercel.app"
   repo="https://github.com/AguzzDev/react-paint-app"
 />
-<Galery imgs={["/images/paint/1.PNG"]} alt="Paint App" />
+<Galery
+  imgs={["/images/paint/1.PNG", "/images/paint/1.PNG"]}
+  alt="Paint App"
+/>
