--- a/data/sports-app.mdx
+++ b/data/sports-app.mdx
@@ -4,7 +4,7 @@ image: ["/images/sports/home/1.png", "/images/sports/home/2.png"]
 date: "2023-01-19"
 ---
 
-<Header title="Sports App" img="/images/sports/1.PNG" alt="Sports Picture" />
+<Header title="Sports App" img="/images/sports/1.png" alt="Sports Picture" />
 <List
   tec={["NextJS"]}
   lib={["TailwindCSS", "GraphQL", "MongoDB"]}
@@ -15,12 +15,12 @@ date: "2023-01-19"
 />
 <Galery
   imgs={[
-    "/images/sports/1.PNG",
-    "/images/sports/2.PNG",
-    "/images/sports/3.PNG",
-    "/images/sports/4.PNG",
-    "/images/sports/5.PNG",
-    "/images/sports/6.PNG",
+    "/images/sports/1.png",
+    "/images/sports/2.png",
+    "/images/sports/3.png",
+    "/images/sports/4.png",
+    "/images/sports/5.png",
+    "/images/sports/6.png",
   ]}
   alt="Sports App"
 />
