--- a/data/dashboard-app.mdx
+++ b/data/dashboard-app.mdx
@@ -22,7 +22,7 @@ date: "2020-01-01"
   ]}
   year="2022"
   client="Propio"
-  website="https://dashboard-iota-ten.vercel.app/"
+  website="https://dashboard-aguzzdev.vercel.app"
   repo="https://github.com/AguzzDev/dashboard"
 />
 <Galery
