--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -6,7 +6,7 @@
   "back": "Volver",
 
   "aboutme-greeting": "Hola",
-  "aboutme-greeting2": "Soy Agustín Ribotta,",
+  "aboutme-greeting2": "Soy Agustín Ribotta",
   "aboutme-greeting3": "Desarrollador Web Argentino",
 
   "project-title": "Proyectos",
