--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -6,7 +6,7 @@
   "back": "Back",
 
   "aboutme-greeting": "Hello there",
-  "aboutme-greeting2": "I'm Agustín Ribotta,",
+  "aboutme-greeting2": "I'm Agustín Ribotta",
   "aboutme-greeting3": "Argentine Web Developer",
 
   "project-title": "Projects",
