refactor(ts): migrate project to ts

--- a/data/crunchyroll-clone.mdx
+++ b/data/crunchyroll-clone.mdx
@@ -13,7 +13,7 @@ date: "2020-01-01"
   tec={["NextJS"]}
   lib={["MDX", "TailwindCSS"]}
   year="2022"
-  client="Propio"
+  client="common:own-project"
   website="https://crunchyroll-clone.vercel.app/"
   repo="https://github.com/AguzzDev/crunchyroll-clone"
 />
