--- a/data/dashboard-app.mdx
+++ b/data/dashboard-app.mdx
@@ -21,7 +21,7 @@ date: "2020-01-01"
     "Headlessui UI",
   ]}
   year="2022"
-  client="Propio"
+  client="common:own-project"
   website="https://dashboard-aguzzdev.vercel.app"
   repo="https://github.com/AguzzDev/dashboard"
 />
