--- a/data/disney-plus-clone.mdx
+++ b/data/disney-plus-clone.mdx
@@ -13,7 +13,7 @@ date: "2020-01-01"
   tec={["NextJS", "GraphCMS"]}
   lib={["Framer Motion", "React Modal", "TailwindCSS", "Swiper"]}
   year="2021"
-  client="Propio"
+  client="common:own-project"
   website="https://nextjs-disney-plus-clone.vercel.app/"
   repo="https://github.com/AguzzDev/nextjs-disney-plus-clone"
 />
