--- a/data/ecommerce-app.mdx
+++ b/data/ecommerce-app.mdx
@@ -13,7 +13,7 @@ date: "2022-04-01"
   tec={["NextJS", "NodeJS", "Redux"]}
   lib={["Mercadopago SDK", "TailwindCSS", "Framer Motion"]}
   year="2022"
-  client="Propio"
+  client="common:own-project"
   website="https://nextjs-ecommerce-aguzzdev.vercel.app/"
   repo="https://github.com/AguzzDev/nextjs-ecommerce"
 />
