--- a/data/elementor-clone.mdx
+++ b/data/elementor-clone.mdx
@@ -13,7 +13,7 @@ date: "2020-01-01"
   tec={["NextJS"]}
   lib={["TailwindCSS", "Radix UI", "Headless UI", "Framer Motion"]}
   year="2021"
-  client="Propio"
+  client="common:own-project"
   website="https://elementor-landingpage.vercel.app/"
   repo="https://github.com/AguzzDev/elementor-landingpage"
 />
