--- a/data/frontendCafe-clone.mdx
+++ b/data/frontendCafe-clone.mdx
@@ -13,7 +13,7 @@ date: "2020-01-01"
   tec={["React"]}
   lib={["TailwindCSS", "React Modal", "React Bootstrap"]}
   year="2021"
-  client="Propio"
+  client="common:own-project"
   website="https://aguzzdev.github.io/react-frontendCafe-clon"
   repo="https://github.com/AguzzDev/react-frontendCafe-clon"
 />
