--- a/data/google-clone.mdx
+++ b/data/google-clone.mdx
@@ -9,7 +9,7 @@ date: "2020-01-01"
   tec={["NextJS"]}
   lib={["TailwindCSS", "React Bootstrap", "React Modal", "TippyJS"]}
   year="2021"
-  client="Propio"
+  client="common:own-project"
   website="https://nextjs-google-pageclon.vercel.app/"
   repo="https://github.com/AguzzDev/nextjs-google-pageclon"
 />
