--- a/data/journal-app.mdx
+++ b/data/journal-app.mdx
@@ -9,7 +9,7 @@ date: "2020-01-01"
   tec={["React"]}
   lib={["Sass", "Moment", "Sweet Alert", "TippyJS"]}
   year="2021"
-  client="Propio"
+  client="common:own-project"
   website="https://r-journal-app.herokuapp.com/"
   repo="https://github.com/AguzzDev/react-journal-app"
 />
