--- a/data/memories-app.mdx
+++ b/data/memories-app.mdx
@@ -13,7 +13,7 @@ date: "2020-01-01"
   tec={["React"]}
   lib={["TailwindCSS", "Swiper", "Moment", "React File Base64", "TippyJS"]}
   year="2021"
-  client="Propio"
+  client="common:own-project"
   website="https://memories-aguzzdev.netlify.app/"
   repo="https://github.com/AguzzDev/mern-crud-memories-app"
 />
