--- a/data/paint-app.mdx
+++ b/data/paint-app.mdx
@@ -9,11 +9,8 @@ date: "2020-01-01"
   tec={["React"]}
   lib={["TailwindCSS", "React Canvas Draw", "RoughJS", "TippyJS"]}
   year="2021"
-  client="Propio"
+  client="common:own-project"
   website="https://react-paint-app.vercel.app"
   repo="https://github.com/AguzzDev/react-paint-app"
 />
-<Galery
-  imgs={["/images/paint/1.PNG", "/images/paint/1.PNG"]}
-  alt="Paint App"
-/>
+<Galery imgs={["/images/paint/1.PNG", "/images/paint/1.PNG"]} alt="Paint App" />
