--- a/data/sports-app.mdx
+++ b/data/sports-app.mdx
@@ -9,7 +9,7 @@ date: "2023-01-19"
   tec={["NextJS"]}
   lib={["TailwindCSS", "GraphQL", "MongoDB"]}
   year="2022"
-  client="Propio"
+  client="common:own-project"
   website="https://nextjs-sports-app.vercel.app"
   repo="https://github.com/AguzzDev/nextjs-sports-app"
 />
