--- a/data/twitter-clone.mdx
+++ b/data/twitter-clone.mdx
@@ -21,7 +21,7 @@ date: "2020-01-01"
     "React Bootstrap",
   ]}
   year="2022"
-  client="Propio"
+  client="common:own-project"
   website="https://aguzzdev-twitter.netlify.app/home"
   repo="https://github.com/AguzzDev/twitter-clone"
 />
