--- a/data/udemy-clone.mdx
+++ b/data/udemy-clone.mdx
@@ -9,7 +9,7 @@ date: "2020-01-01"
   tec={["NextJS"]}
   lib={["TailwindCSS", "Tippy", "Headless UI", "Swiper"]}
   year="2021"
-  client="Propio"
+  client="common:own-project"
   website="https://nextjs-udemy-pageclone.vercel.app/"
   repo="https://github.com/AguzzDev/nextjs-udemy-pageclone"
 />
