--- a/data/whatsapp-clone.mdx
+++ b/data/whatsapp-clone.mdx
@@ -10,10 +10,10 @@ date: "2020-01-01"
   alt="Whatsapp Picture"
 />
 <List
-  tec={["NextJS", "SocketIO"]}
+  tec={["NextJS", "GraphQL", "Prisma"]}
   lib={["TailwindCSS", "Radix UI", "Headless UI"]}
-  year="2021"
-  client="Propio"
+  year="2023"
+  client="common:own-project"
   website="https://nextjs-whatsapp-clone-six.vercel.app"
   repo="https://github.com/AguzzDev/nextjs-whatsapp-clone"
 />
