--- a/data/discord-clone.mdx
+++ b/data/discord-clone.mdx
@@ -13,7 +13,7 @@ date: "2020-01-01"
   tec={["NextJS", "GraphQL", "Nexus", "Prisma"]}
   lib={["Framer Motion", "Formik", "Yup", "TailwindCSS", "Headless UI"]}
   year="2022"
-  client="Propio"
+  client="common:own-project"
   website=""
   repo="https://github.com/AguzzDev/discord-clone"
 />
