--- a/data/earth-threejs.mdx
+++ b/data/earth-threejs.mdx
@@ -13,7 +13,7 @@ date: "2022-04-01"
   tec={["React", "ThreeJS"]}
   lib={[]}
   year="2022"
-  client="Propio"
+  client="common:own-project"
   website="https://threejs-planet-aguzzdev.vercel.app/"
   repo="https://github.com/AguzzDev/threejs-planet"
 />
