--- a/data/netflix-clone.mdx
+++ b/data/netflix-clone.mdx
@@ -13,7 +13,7 @@ date: "2020-01-01"
   tec={["NextJS", "Typescript", "GraphQL"]}
   lib={["Framer Motion", "Sass", "TailwindCSS", "Swiper", "React Modal"]}
   year="2021"
-  client="Propio"
+  client="common:own-project"
   website="https://netflix-clone-aguzzdev.vercel.app/"
   repo="https://github.com/AguzzDev/netflix-clone"
 />
