--- a/data/whatsapp-clone.mdx
+++ b/data/whatsapp-clone.mdx
@@ -10,11 +10,11 @@ date: "2023-01-01"
   alt="Whatsapp Picture"
 />
 <List
-  tec={["NextJS", "GraphQL", "Prisma"]}
+  tec={["NextJS", "Typescript", "GraphQL", "Prisma"]}
   lib={["TailwindCSS", "Radix UI", "Headless UI"]}
   year="2023"
   client="common:own-project"
-  website="https://nextjs-whatsapp-clone-six.vercel.app"
+  website="https://whatsapp-app.agustin-ribotta.xyz/"
   repo="https://github.com/AguzzDev/nextjs-whatsapp-clone"
 />
 <Galery
