feat(projects): add new images to whatsapp project

--- a/data/whatsapp-clone.mdx
+++ b/data/whatsapp-clone.mdx
@@ -22,6 +22,8 @@ date: "2023-01-01"
     "/images/whatsapp/1.PNG",
     "/images/whatsapp/2.PNG",
     "/images/whatsapp/3.PNG",
+    "/images/whatsapp/4.PNG",
+    "/images/whatsapp/5.PNG",
   ]}
   alt="Whatsapp Clone"
 />
