chore(projects): update all projects web url

--- a/data/crunchyroll-clone.mdx
+++ b/data/crunchyroll-clone.mdx
@@ -14,7 +14,7 @@ date: "2022-01-01"
   lib={["MDX", "TailwindCSS"]}
   year="2022"
   client="common:own-project"
-  website="https://crunchyroll-clone.vercel.app/"
+  website="https://crunchyroll-app.agustin-ribotta.xyz/"
   repo="https://github.com/AguzzDev/crunchyroll-clone"
 />
 <Galery
