--- a/data/dashboard-app.mdx
+++ b/data/dashboard-app.mdx
@@ -22,7 +22,7 @@ date: "2022-04-01"
   ]}
   year="2022"
   client="common:own-project"
-  website="https://dashboard-aguzzdev.vercel.app"
+  website="https://dashboard-app.agustin-ribotta.xyz"
   repo="https://github.com/AguzzDev/dashboard"
 />
 <Galery
