--- a/data/discord-clone.mdx
+++ b/data/discord-clone.mdx
@@ -14,7 +14,7 @@ date: "2022-07-01"
   lib={["Framer Motion", "Formik", "Yup", "TailwindCSS", "Headless UI"]}
   year="2022"
   client="common:own-project"
-  website=""
+  website="https://discord-app.agustin-ribotta.xyz/"
   repo="https://github.com/AguzzDev/discord-clone"
 />
 <Galery
