--- a/data/disney-plus-clone.mdx
+++ b/data/disney-plus-clone.mdx
@@ -14,7 +14,7 @@ date: "2022-01-01"
   lib={["Framer Motion", "React Modal", "TailwindCSS", "Swiper"]}
   year="2021"
   client="common:own-project"
-  website="https://nextjs-disney-plus-clone.vercel.app/"
+  website="https://disney-plus-app.agustin-ribotta.xyz/"
   repo="https://github.com/AguzzDev/nextjs-disney-plus-clone"
 />
 <Galery
