--- a/data/earth-threejs.mdx
+++ b/data/earth-threejs.mdx
@@ -14,7 +14,7 @@ date: "2022-04-01"
   lib={[]}
   year="2022"
   client="common:own-project"
-  website="https://threejs-planet-aguzzdev.vercel.app/"
+  website="https://planet-threejs-app.agustin-ribotta.xyz/"
   repo="https://github.com/AguzzDev/threejs-planet"
 />
 <Galery
