--- a/data/ecommerce-app.mdx
+++ b/data/ecommerce-app.mdx
@@ -14,7 +14,7 @@ date: "2022-04-01"
   lib={["Mercadopago SDK", "TailwindCSS", "Framer Motion"]}
   year="2022"
   client="common:own-project"
-  website="https://nextjs-ecommerce-aguzzdev.vercel.app/"
+  website="https://ecommerce-app.agustin-ribotta.xyz/"
   repo="https://github.com/AguzzDev/nextjs-ecommerce"
 />
 <Galery
