--- a/data/elementor-clone.mdx
+++ b/data/elementor-clone.mdx
@@ -14,7 +14,7 @@ date: "2021-01-01"
   lib={["TailwindCSS", "Radix UI", "Headless UI", "Framer Motion"]}
   year="2021"
   client="common:own-project"
-  website="https://elementor-landingpage.vercel.app/"
+  website="https://elementor-app.agustin-ribotta.xyz/"
   repo="https://github.com/AguzzDev/elementor-landingpage"
 />
 <Galery
