--- a/data/frontendCafe-clone.mdx
+++ b/data/frontendCafe-clone.mdx
@@ -14,7 +14,7 @@ date: "2021-01-01"
   lib={["TailwindCSS", "React Modal", "React Bootstrap"]}
   year="2021"
   client="common:own-project"
-  website="https://aguzzdev.github.io/react-frontendCafe-clon"
+  website="https://frontendcafe-app.agustin-ribotta.xyz/"
   repo="https://github.com/AguzzDev/react-frontendCafe-clon"
 />
 <Galery
