--- a/data/google-clone.mdx
+++ b/data/google-clone.mdx
@@ -10,7 +10,7 @@ date: "2021-01-01"
   lib={["TailwindCSS", "React Bootstrap", "React Modal", "TippyJS"]}
   year="2021"
   client="common:own-project"
-  website="https://nextjs-google-pageclon.vercel.app/"
+  website="https://google-app.agustin-ribotta.xyz"
   repo="https://github.com/AguzzDev/nextjs-google-pageclon"
 />
 <Galery
