--- a/data/journal-app.mdx
+++ b/data/journal-app.mdx
@@ -10,7 +10,7 @@ date: "2021-01-01"
   lib={["Sass", "Moment", "Sweet Alert", "TippyJS"]}
   year="2021"
   client="common:own-project"
-  website="https://r-journal-app.herokuapp.com/"
+  website="https://journal-app.agustin-ribotta.xyz"
   repo="https://github.com/AguzzDev/react-journal-app"
 />
 <Galery
