--- a/data/memories-app.mdx
+++ b/data/memories-app.mdx
@@ -14,7 +14,7 @@ date: "2021-01-01"
   lib={["TailwindCSS", "Swiper", "Moment", "React File Base64", "TippyJS"]}
   year="2021"
   client="common:own-project"
-  website="https://memories-aguzzdev.netlify.app/"
+  website="https://memories-app.agustin-ribotta.xyz"
   repo="https://github.com/AguzzDev/mern-crud-memories-app"
 />
 <Galery
