--- a/data/paint-app.mdx
+++ b/data/paint-app.mdx
@@ -10,7 +10,7 @@ date: "2021-01-01"
   lib={["TailwindCSS", "React Canvas Draw", "RoughJS", "TippyJS"]}
   year="2021"
   client="common:own-project"
-  website="https://react-paint-app.vercel.app"
+  website="https://paint-app.agustin-ribotta.xyz/"
   repo="https://github.com/AguzzDev/react-paint-app"
 />
 <Galery imgs={["/images/paint/1.PNG", "/images/paint/1.PNG"]} alt="Paint App" />
