--- a/data/sports-app.mdx
+++ b/data/sports-app.mdx
@@ -10,7 +10,7 @@ date: "2022-10-01"
   lib={["TailwindCSS", "GraphQL", "MongoDB"]}
   year="2022"
   client="common:own-project"
-  website="https://nextjs-sports-app.vercel.app"
+  website="https://sports-app.agustin-ribotta.xyz/"
   repo="https://github.com/AguzzDev/nextjs-sports-app"
 />
 <Galery
