--- a/data/twitter-clone.mdx
+++ b/data/twitter-clone.mdx
@@ -22,7 +22,7 @@ date: "2022-05-01"
   ]}
   year="2022"
   client="common:own-project"
-  website="https://aguzzdev-twitter.netlify.app/home"
+  website="https://twitter-app.agustin-ribotta.xyz"
   repo="https://github.com/AguzzDev/twitter-clone"
 />
 <Galery
