--- a/data/udemy-clone.mdx
+++ b/data/udemy-clone.mdx
@@ -10,7 +10,7 @@ date: "2021-01-01"
   lib={["TailwindCSS", "Tippy", "Headless UI", "Swiper"]}
   year="2021"
   client="common:own-project"
-  website="https://nextjs-udemy-pageclone.vercel.app/"
+  website="https://udemy-app.agustin-ribotta.xyz/"
   repo="https://github.com/AguzzDev/nextjs-udemy-pageclone"
 />
 <Galery
