--- a/data/netflix-clone.mdx
+++ b/data/netflix-clone.mdx
@@ -14,7 +14,7 @@ date: "2022-01-01"
   lib={["Framer Motion", "Sass", "TailwindCSS", "Swiper", "React Modal"]}
   year="2021"
   client="common:own-project"
-  website="https://netflix-clone-aguzzdev.vercel.app/"
+  website="https://netflix-app.agustin-ribotta.xyz/"
   repo="https://github.com/AguzzDev/netflix-clone"
 />
 <Galery
