feat: new version

--- a/data/crunchyroll-clone.mdx
+++ b/data/crunchyroll-clone.mdx
@@ -9,22 +9,26 @@ date: "2022-01-01"
   img="/images/crunchyroll/1.PNG"
   alt="Crunchyroll Picture"
 />
+<Overview
+  description="common:overview-crunchyroll-description"
+  features="common:overview-crunchyroll-features"
+  website="https://crunchyroll-app.agustin-ribotta.xyz/"
+  repo="https://github.com/AguzzDev/crunchyroll-clone"
+/>
 <List
   tec={["NextJS"]}
   lib={["MDX", "TailwindCSS"]}
   year="2022"
   client="common:own-project"
-  website="https://crunchyroll-app.agustin-ribotta.xyz/"
-  repo="https://github.com/AguzzDev/crunchyroll-clone"
 />
 <Galery
   imgs={[
-    "/images/crunchyroll/4.PNG",
-    "/images/crunchyroll/3.PNG",
-    "/images/crunchyroll/1.PNG",
-    "/images/crunchyroll/2.PNG",
-    "/images/crunchyroll/5.PNG",
-    "/images/crunchyroll/6.PNG",
+    { path: "/images/crunchyroll/4.PNG", mobile: "false" },
+    { path: "/images/crunchyroll/3.PNG", mobile: "false" },
+    { path: "/images/crunchyroll/1.PNG", mobile: "false" },
+    { path: "/images/crunchyroll/2.PNG", mobile: "false" },
+    { path: "/images/crunchyroll/5.PNG", mobile: "false" },
+    { path: "/images/crunchyroll/6.PNG", mobile: "false" },
   ]}
   alt="Crunchyroll Clone"
 />
