--- a/data/dashboard-app.mdx
+++ b/data/dashboard-app.mdx
@@ -9,6 +9,12 @@ date: "2022-04-01"
   img="/images/dashboard/1.PNG"
   alt="Dashboard Picture"
 />
+<Overview
+  description="common:overview-dashboard-description"
+  features="common:overview-dashboard-features"
+  website="https://dashboard-app.agustin-ribotta.xyz"
+  repo="https://github.com/AguzzDev/dashboard"
+/>
 <List
   tec={["NextJS"]}
   lib={[
@@ -22,17 +28,15 @@ date: "2022-04-01"
   ]}
   year="2022"
   client="common:own-project"
-  website="https://dashboard-app.agustin-ribotta.xyz"
-  repo="https://github.com/AguzzDev/dashboard"
 />
 <Galery
   imgs={[
-    "/images/dashboard/4.PNG",
-    "/images/dashboard/1.PNG",
-    "/images/dashboard/2.PNG",
-    "/images/dashboard/3.PNG",
-    "/images/dashboard/5.PNG",
-    "/images/dashboard/6.PNG",
+    { path: "/images/dashboard/4.PNG", mobile: "false" },
+    { path: "/images/dashboard/3.PNG", mobile: "false" },
+    { path: "/images/dashboard/1.PNG", mobile: "false" },
+    { path: "/images/dashboard/2.PNG", mobile: "false" },
+    { path: "/images/dashboard/5.PNG", mobile: "false" },
+    { path: "/images/dashboard/6.PNG", mobile: "false" },
   ]}
   alt="Dashboard Clone"
 />
