--- a/data/discord-clone.mdx
+++ b/data/discord-clone.mdx
@@ -9,22 +9,26 @@ date: "2022-07-01"
   img="/images/discord/3.PNG"
   alt="Discord Picture"
 />
+<Overview
+  description="common:overview-discord-description"
+  features="common:overview-discord-features"
+  website=""
+  repo="https://github.com/AguzzDev/discord-clone"
+/>
 <List
   tec={["NextJS", "GraphQL", "Nexus", "Prisma"]}
   lib={["Framer Motion", "Formik", "Yup", "TailwindCSS", "Headless UI"]}
   year="2022"
   client="common:own-project"
-  website=""
-  repo="https://github.com/AguzzDev/discord-clone"
 />
 <Galery
   imgs={[
-    "/images/discord/4.PNG",
-    "/images/discord/3.PNG",
-    "/images/discord/1.PNG",
-    "/images/discord/2.PNG",
-    "/images/discord/5.PNG",
-    "/images/discord/6.PNG",
+    { path: "/images/discord/4.PNG", mobile: "false" },
+    { path: "/images/discord/3.PNG", mobile: "false" },
+    { path: "/images/discord/1.PNG", mobile: "false" },
+    { path: "/images/discord/2.PNG", mobile: "false" },
+    { path: "/images/discord/5.PNG", mobile: "false" },
+    { path: "/images/discord/6.PNG", mobile: "false" },
   ]}
   alt="Discord Clone"
 />
