--- a/data/disney-plus-clone.mdx
+++ b/data/disney-plus-clone.mdx
@@ -9,22 +9,26 @@ date: "2022-01-01"
   img="/images/disney/3.PNG"
   alt="Disney Picture"
 />
+<Overview
+  description="common:overview-disney-description"
+  features="common:overview-disney-features"
+  website="https://disney-plus-app.agustin-ribotta.xyz/"
+  repo="https://github.com/AguzzDev/nextjs-disney-plus-clone"
+/>
 <List
   tec={["NextJS", "GraphCMS"]}
   lib={["Framer Motion", "React Modal", "TailwindCSS", "Swiper"]}
   year="2021"
   client="common:own-project"
-  website="https://disney-plus-app.agustin-ribotta.xyz/"
-  repo="https://github.com/AguzzDev/nextjs-disney-plus-clone"
 />
 <Galery
   imgs={[
-    "/images/disney/4.PNG",
-    "/images/disney/3.PNG",
-    "/images/disney/1.PNG",
-    "/images/disney/2.PNG",
-    "/images/disney/5.PNG",
-    "/images/disney/6.PNG",
+    { path: "/images/disney/4.PNG", mobile: "false" },
+    { path: "/images/disney/3.PNG", mobile: "false" },
+    { path: "/images/disney/1.PNG", mobile: "false" },
+    { path: "/images/disney/2.PNG", mobile: "false" },
+    { path: "/images/disney/5.PNG", mobile: "false" },
+    { path: "/images/disney/6.PNG", mobile: "true" },
   ]}
   alt="Disney Clone"
 />
