--- a/data/earth-threejs.mdx
+++ b/data/earth-threejs.mdx
@@ -9,15 +9,22 @@ date: "2022-04-01"
   img="/images/planet/1.PNG"
   alt="Planet Picture"
 />
+<Overview
+  description="common:overview-planet-description"
+  features="common:overview-planet-features"
+  website="https://planet-threejs-app.agustin-ribotta.xyz"
+  repo="https://github.com/AguzzDev/threejs-planet"
+/>
 <List
   tec={["React", "ThreeJS"]}
   lib={[]}
   year="2022"
   client="common:own-project"
-  website="https://planet-threejs-app.agustin-ribotta.xyz/"
-  repo="https://github.com/AguzzDev/threejs-planet"
 />
 <Galery
-  imgs={["/images/planet/1.PNG", "/images/planet/1.PNG"]}
+  imgs={[
+    { path: "/images/planet/1.PNG", mobile: "false" },
+    { path: "/images/planet/1.PNG", mobile: "false" },
+  ]}
   alt="Planet Clone"
 />
