--- a/data/ecommerce-app.mdx
+++ b/data/ecommerce-app.mdx
@@ -9,22 +9,26 @@ date: "2022-04-01"
   img="/images/ecommerce/1.PNG"
   alt="Ecommerce Picture"
 />
+<Overview
+  description="common:overview-ecommerce-description"
+  features="common:overview-ecommerce-features"
+  website="https://ecommerce-app.agustin-ribotta.xyz"
+  repo="https://github.com/AguzzDev/nextjs-ecommerce"
+/>
 <List
   tec={["NextJS", "NodeJS", "Redux"]}
   lib={["Mercadopago SDK", "TailwindCSS", "Framer Motion"]}
   year="2022"
   client="common:own-project"
-  website="https://ecommerce-app.agustin-ribotta.xyz/"
-  repo="https://github.com/AguzzDev/nextjs-ecommerce"
 />
 <Galery
   imgs={[
-    "/images/ecommerce/1.PNG",
-    "/images/ecommerce/2.PNG",
-    "/images/ecommerce/3.PNG",
-    "/images/ecommerce/4.PNG",
-    "/images/ecommerce/5.PNG",
-    "/images/ecommerce/6.PNG",
+    { path: "/images/ecommerce/4.PNG", mobile: "false" },
+    { path: "/images/ecommerce/3.PNG", mobile: "false" },
+    { path: "/images/ecommerce/1.PNG", mobile: "false" },
+    { path: "/images/ecommerce/2.PNG", mobile: "false" },
+    { path: "/images/ecommerce/5.PNG", mobile: "false" },
+    { path: "/images/ecommerce/6.PNG", mobile: "false" },
   ]}
   alt="Ecommerce App"
 />
