--- a/data/frontendCafe-clone.mdx
+++ b/data/frontendCafe-clone.mdx
@@ -9,22 +9,26 @@ date: "2021-01-01"
   img="/images/frontendcafe/1.PNG"
   alt="FrontendCafe Picture"
 />
+<Overview
+  description="common:overview-frontendcafe-description"
+  features="common:overview-frontendcafe-features"
+  website="https://frontendcafe-app.agustin-ribotta.xyz/"
+  repo="https://github.com/AguzzDev/react-frontendCafe-clon"
+/>
 <List
   tec={["React"]}
   lib={["TailwindCSS", "React Modal", "React Bootstrap"]}
   year="2021"
   client="common:own-project"
-  website="https://frontendcafe-app.agustin-ribotta.xyz/"
-  repo="https://github.com/AguzzDev/react-frontendCafe-clon"
 />
 <Galery
   imgs={[
-    "/images/frontendcafe/1.PNG",
-    "/images/frontendcafe/2.PNG",
-    "/images/frontendcafe/3.PNG",
-    "/images/frontendcafe/4.PNG",
-    "/images/frontendcafe/5.PNG",
-    "/images/frontendcafe/6.PNG",
+    { path: "/images/frontendcafe/4.PNG", mobile: "false" },
+    { path: "/images/frontendcafe/3.PNG", mobile: "false" },
+    { path: "/images/frontendcafe/1.PNG", mobile: "false" },
+    { path: "/images/frontendcafe/2.PNG", mobile: "false" },
+    { path: "/images/frontendcafe/5.PNG", mobile: "false" },
+    { path: "/images/frontendcafe/6.PNG", mobile: "true" },
   ]}
   alt="FrontendCafe Clone"
 />
