--- a/data/journal-app.mdx
+++ b/data/journal-app.mdx
@@ -5,20 +5,24 @@ date: "2021-01-01"
 ---
 
 <Header title="Journal App" img="/images/journal/1.PNG" alt="Journal Picture" />
+<Overview
+  description="common:overview-journal-description"
+  features="common:overview-journal-features"
+  website="https://journal-app.agustin-ribotta.xyz"
+  repo="https://github.com/AguzzDev/react-journal-app"
+/>
 <List
   tec={["React"]}
   lib={["Sass", "Moment", "Sweet Alert", "TippyJS"]}
   year="2021"
   client="common:own-project"
-  website="https://journal-app.agustin-ribotta.xyz"
-  repo="https://github.com/AguzzDev/react-journal-app"
 />
 <Galery
   imgs={[
-    "/images/journal/1.PNG",
-    "/images/journal/2.PNG",
-    "/images/journal/3.PNG",
-    "/images/journal/4.PNG",
+    { path: "/images/journal/1.PNG", mobile: "false" },
+    { path: "/images/journal/2.PNG", mobile: "false" },
+    { path: "/images/journal/3.PNG", mobile: "false" },
+    { path: "/images/journal/4.PNG", mobile: "false" },
   ]}
   alt="Journal App"
 />
