--- a/data/memories-app.mdx
+++ b/data/memories-app.mdx
@@ -9,21 +9,25 @@ date: "2021-01-01"
   img="/images/memories/1.PNG"
   alt="Memories Picture"
 />
+<Overview
+  description="common:overview-memories-description"
+  features="common:overview-memories-features"
+  website="https://memories-app.agustin-ribotta.xyz"
+  repo="https://github.com/AguzzDev/mern-crud-memories-app"
+/>
 <List
   tec={["React"]}
   lib={["TailwindCSS", "Swiper", "Moment", "React File Base64", "TippyJS"]}
   year="2021"
   client="common:own-project"
-  website="https://memories-app.agustin-ribotta.xyz"
-  repo="https://github.com/AguzzDev/mern-crud-memories-app"
 />
 <Galery
   imgs={[
-    "/images/memories/1.PNG",
-    "/images/memories/2.PNG",
-    "/images/memories/3.PNG",
-    "/images/memories/4.PNG",
-    "/images/memories/5.PNG",
+    { path: "/images/memories/1.PNG", mobile: "false" },
+    { path: "/images/memories/2.PNG", mobile: "true" },
+    { path: "/images/memories/3.PNG", mobile: "false" },
+    { path: "/images/memories/4.PNG", mobile: "false" },
+    { path: "/images/memories/5.PNG", mobile: "false" },
   ]}
   alt="Memories App"
 />
