--- a/data/twitter-clone.mdx
+++ b/data/twitter-clone.mdx
@@ -9,6 +9,12 @@ date: "2022-05-01"
   img="/images/twitter/3.PNG"
   alt="Twitter Picture"
 />
+<Overview
+  description="common:overview-twitter-description"
+  features="common:overview-twitter-features"
+  website="https://twitter-app.agustin-ribotta.xyz"
+  repo="https://github.com/AguzzDev/twitter-clone"
+/>
 <List
   tec={["React"]}
   lib={[
@@ -22,17 +28,15 @@ date: "2022-05-01"
   ]}
   year="2022"
   client="common:own-project"
-  website="https://twitter-app.agustin-ribotta.xyz"
-  repo="https://github.com/AguzzDev/twitter-clone"
 />
 <Galery
   imgs={[
-    "/images/twitter/4.PNG",
-    "/images/twitter/3.PNG",
-    "/images/twitter/1.PNG",
-    "/images/twitter/2.PNG",
-    "/images/twitter/5.PNG",
-    "/images/twitter/6.PNG",
+    { path: "/images/twitter/4.PNG", mobile: "false" },
+    { path: "/images/twitter/3.PNG", mobile: "false" },
+    { path: "/images/twitter/1.PNG", mobile: "false" },
+    { path: "/images/twitter/2.PNG", mobile: "false" },
+    { path: "/images/twitter/5.PNG", mobile: "false" },
+    { path: "/images/twitter/6.PNG", mobile: "false" },
   ]}
   alt="Twitter Clone"
 />
