--- a/data/whatsapp-clone.mdx
+++ b/data/whatsapp-clone.mdx
@@ -9,21 +9,25 @@ date: "2023-01-01"
   img="/images/whatsapp/3.PNG"
   alt="Whatsapp Picture"
 />
+<Overview
+  description="common:overview-whatsapp-description"
+  features="common:overview-whatsapp-features"
+  website="https://whatsapp-app.agustin-ribotta.xyz/"
+  repo="https://github.com/AguzzDev/nextjs-whatsapp-clone"
+/>
 <List
   tec={["NextJS", "Typescript", "GraphQL", "Prisma"]}
   lib={["TailwindCSS", "Radix UI", "Headless UI"]}
   year="2023"
   client="common:own-project"
-  website="https://whatsapp-app.agustin-ribotta.xyz/"
-  repo="https://github.com/AguzzDev/nextjs-whatsapp-clone"
 />
 <Galery
   imgs={[
-    "/images/whatsapp/1.PNG",
-    "/images/whatsapp/2.PNG",
-    "/images/whatsapp/3.PNG",
-    "/images/whatsapp/4.PNG",
-    "/images/whatsapp/5.PNG",
+    { path: "/images/whatsapp/1.PNG", mobile: "false" },
+    { path: "/images/whatsapp/2.PNG", mobile: "false" },
+    { path: "/images/whatsapp/3.PNG", mobile: "false" },
+    { path: "/images/whatsapp/4.PNG", mobile: "false" },
+    { path: "/images/whatsapp/5.PNG", mobile: "false" },
   ]}
   alt="Whatsapp Clone"
 />
