--- a/data/elementor-clone.mdx
+++ b/data/elementor-clone.mdx
@@ -9,22 +9,26 @@ date: "2021-01-01"
   img="/images/elementor/1.PNG"
   alt="Elementor Picture"
 />
+<Overview
+  description="common:overview-elementor-description"
+  features="common:overview-elementor-features"
+  website="https://elementor-app.agustin-ribotta.xyz/"
+  repo="https://github.com/AguzzDev/elementor-landingpage"
+/>
 <List
   tec={["NextJS"]}
   lib={["TailwindCSS", "Radix UI", "Headless UI", "Framer Motion"]}
   year="2021"
   client="common:own-project"
-  website="https://elementor-app.agustin-ribotta.xyz/"
-  repo="https://github.com/AguzzDev/elementor-landingpage"
 />
 <Galery
   imgs={[
-    "/images/elementor/4.PNG",
-    "/images/elementor/3.PNG",
-    "/images/elementor/1.PNG",
-    "/images/elementor/2.PNG",
-    "/images/elementor/5.PNG",
-    "/images/elementor/6.PNG",
+    { path: "/images/elementor/4.PNG", mobile: "false" },
+    { path: "/images/elementor/3.PNG", mobile: "false" },
+    { path: "/images/elementor/1.PNG", mobile: "false" },
+    { path: "/images/elementor/2.PNG", mobile: "false" },
+    { path: "/images/elementor/5.PNG", mobile: "false" },
+    { path: "/images/elementor/6.PNG", mobile: "true" },
   ]}
   alt="Elementor Clone"
 />
