--- a/data/google-clone.mdx
+++ b/data/google-clone.mdx
@@ -5,19 +5,23 @@ date: "2021-01-01"
 ---
 
 <Header title="Google Clone" img="/images/google/3.PNG" alt="Google Picture" />
+<Overview
+  description="common:overview-google-description"
+  features="common:overview-google-features"
+  website="https://google-app.agustin-ribotta.xyz"
+  repo="https://github.com/AguzzDev/nextjs-google-pageclon"
+/>
 <List
   tec={["NextJS"]}
   lib={["TailwindCSS", "React Bootstrap", "React Modal", "TippyJS"]}
   year="2021"
   client="common:own-project"
-  website="https://google-app.agustin-ribotta.xyz"
-  repo="https://github.com/AguzzDev/nextjs-google-pageclon"
 />
 <Galery
   imgs={[
-    "/images/google/1.PNG",
-    "/images/google/2.PNG",
-    "/images/google/3.PNG",
+    { path: "/images/google/1.PNG", mobile: "false" },
+    { path: "/images/google/2.PNG", mobile: "false" },
+    { path: "/images/google/3.PNG", mobile: "false" },
   ]}
   alt="Google Clone"
 />
