--- a/data/netflix-clone.mdx
+++ b/data/netflix-clone.mdx
@@ -9,22 +9,26 @@ date: "2022-01-01"
   img="/images/netflix/1.PNG"
   alt="Netflix Picture"
 />
+<Overview
+  description="common:overview-netflix-description"
+  features="common:overview-netflix-features"
+  website="https://netflix-app.agustin-ribotta.xyz/"
+  repo="https://github.com/AguzzDev/netflix-clone"
+/>
 <List
   tec={["NextJS", "Typescript", "GraphQL"]}
   lib={["Framer Motion", "Sass", "TailwindCSS", "Swiper", "React Modal"]}
   year="2021"
   client="common:own-project"
-  website="https://netflix-app.agustin-ribotta.xyz/"
-  repo="https://github.com/AguzzDev/netflix-clone"
 />
 <Galery
   imgs={[
-    "/images/netflix/4.PNG",
-    "/images/netflix/3.PNG",
-    "/images/netflix/1.PNG",
-    "/images/netflix/2.PNG",
-    "/images/netflix/5.PNG",
-    "/images/netflix/6.PNG",
+    { path: "/images/netflix/4.PNG", mobile: "false" },
+    { path: "/images/netflix/3.PNG", mobile: "false" },
+    { path: "/images/netflix/1.PNG", mobile: "false" },
+    { path: "/images/netflix/2.PNG", mobile: "false" },
+    { path: "/images/netflix/5.PNG", mobile: "false" },
+    { path: "/images/netflix/6.PNG", mobile: "false" },
   ]}
   alt="Netflix Clone"
 />
