fix(project): path image changed

--- a/data/sports-app.mdx
+++ b/data/sports-app.mdx
@@ -19,12 +19,12 @@ date: "2022-10-01"
 />
 <Galery
   imgs={[
-    { path: "/images/sports/4.PNG", mobile: "false" },
-    { path: "/images/sports/3.PNG", mobile: "true" },
-    { path: "/images/sports/1.PNG", mobile: "false" },
-    { path: "/images/sports/2.PNG", mobile: "true" },
-    { path: "/images/sports/5.PNG", mobile: "false" },
-    { path: "/images/sports/6.PNG", mobile: "true" },
+    { path: "/images/sports/4.png", mobile: "false" },
+    { path: "/images/sports/3.png", mobile: "true" },
+    { path: "/images/sports/1.png", mobile: "false" },
+    { path: "/images/sports/2.png", mobile: "true" },
+    { path: "/images/sports/5.png", mobile: "false" },
+    { path: "/images/sports/6.png", mobile: "true" },
   ]}
   alt="Sports App"
   mobile="true"
