feat(api): sendMail api route created

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,6 +1,7 @@
 {
   "metadata": "Portfolio of",
 
+  "form-send": "Sent",
   "loading": "Welcome to my Portfolio",
   "404": "Page not found",
   "back": "Back",
