--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -1,6 +1,7 @@
 {
   "metadata": "Portafolio de",
 
+  "form-send": "Enviado",
   "loading": "Bienvenido a mi Portafolio",
   "404": "Pagina no encontrada",
   "back": "Volver",
