fix(ui): footer view

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -18,8 +18,8 @@
 
   "aboutme-greeting": "Hello! I'm Agustín",
   "aboutme-greeting2": "From concept to code.",
-  "aboutme-greeting3": " Full Stack Developer, ",
-  "aboutme-greeting4": "passionate about innovation.",
+  "aboutme-greeting3": " Full Stack Developer",
+  "aboutme-greeting4": " passionate about innovation.",
   "aboutme-talk": "Let's Talk",
 
   "details-title":"Details",
