--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -18,8 +18,8 @@
 
   "aboutme-greeting": "Hola, soy Agustín",
   "aboutme-greeting2": "Del concepto al código.",
-  "aboutme-greeting3": " Desarrollador Full Stack, ",
-  "aboutme-greeting4": "apasionado por la innovación",
+  "aboutme-greeting3": " Desarrollador Full Stack",
+  "aboutme-greeting4": " apasionado por la innovación",
   "aboutme-talk": "Hablemos",
 
   "details-title":"Detalle",
