chore: change website url

--- a/data/poker-app.mdx
+++ b/data/poker-app.mdx
@@ -12,7 +12,7 @@ date: "2024-08-24"
 <Overview
   description="common:overview-poker-description"
   features="common:overview-poker-features"
-  website="https://poker-app.agustin-ribotta.xyz"
+  website="https://poker.agustin-ribotta.xyz"
   repo="https://github.com/AguzzDev/poker-app"
 />
 <List
