chore: update sports project url

--- a/data/sports-app.mdx
+++ b/data/sports-app.mdx
@@ -8,7 +8,7 @@ date: "2022-10-01"
 <Overview
   description="common:overview-sports-description"
   features="common:overview-sports-features"
-  website="https://sports-app.agustin-ribotta.xyz/"
+  website="https://sports.agustin-ribotta.xyz/"
   repo="https://github.com/AguzzDev/nextjs-sports-app"
 />
 <List
